src/main.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

@font-face {
    font-family: 'Montserrat';
    src: url('./assets/fonts/Montserrat-VariableFont_wght.ttf')
        format('truetype');
}

:root {
    --primary-fonts: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont,
        'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
        sans-serif;
}

/*later will be :root.dark theme*/
:root {
    --main-text-clr: #ffffff;
    --inverted-text-clr: #000000;
    --sub-text-clr-1: #5c7a84;
    --weather-details-bgClr: #222831;
    --forecast-card-bgClr: #272e37;
    --bg-gradient: linear-gradient(to top right, #2a3b4c, #1a2635);
    --svg-filter: invert(100%) sepia(94%) saturate(25%) hue-rotate(101deg)
        brightness(108%) contrast(106%);
}

html {
    font-size: 62.5%;
}

body {
    min-height: 100vh;
    font: normal 1.6rem var(--primary-fonts);
    background-color: #333c4c;
    color: var(--main-text-clr);
}

button {
    cursor: pointer;
}

.font-l {
    font-size: 2.8rem;
}

.font-xl {
    font-size: 4.5rem;
}

.font-sbold {
    font-weight: 500;
}

.font-bold {
    font-weight: 600;
}

.font-xbold {
    font-weight: 700;
}

.container {
    position: absolute;
    width: 100%;
    min-height: 100vh;
    top: 0;
    left: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 2rem;
    transition: opacity 0.6s cubic-bezier(0.4, 0, 0.2, 1);
    background: var(--bg-gradient);
}

.hidden {
    opacity: 0;
    pointer-events: none;
}

.search-page {
    flex-direction: column;
    gap: 70px;
}

.search-form {
    position: relative;
}

.search-form .input-error-msg {
    position: absolute;
    bottom: -28px;
    left: 3px;
    width: max-content;
    color: red;
    font-size: 1.6rem;
}

.search-form input {
    width: 400px;
    height: 55px;
    font-size: 2rem;
    font-weight: 500;
    letter-spacing: 2px;
    background-color: transparent;
    color: inherit;
    border: none;
    border-bottom: 1px solid var(--sub-text-clr-1);
    transition: 0.3s ease-in-out;
}

::placeholder {
    font-style: italic;
    letter-spacing: 3px;
    color: var(--sub-text-clr-1);
}

.search-form input:focus {
    outline: none;
    border-color: var(--main-text-clr);
    padding-left: 5px;
}

.search-form button[type='submit'] {
    position: absolute;
    right: 0px;
    font-size: 3.5rem;
    color: hsl(195deg 39.5% 66.94%);
    background: transparent;
    border: none;
    transition: 0.3s ease-in-out;
}

.search-form button[type='submit']:hover {
    color: var(--main-text-clr);
}

.loader {
    width: fit-content;
    font-family: monospace;
    clip-path: inset(0 3ch 0 0);
    animation: l4 1s steps(4) infinite;
}

.loader:before {
    content: 'Loading...';
}

@keyframes l4 {
    to {
        clip-path: inset(0 -1ch 0 0);
    }
}

.error-container {
    position: relative;
}

.error-container img {
    position: absolute;
    left: -100px;
    top: -5px;
    width: 100px;
    height: 100px;
}

.weather-display-page > div {
    border-radius: 30px;
    height: 625px;
    width: 600px;
}

.weather-display-page img {
    filter: var(--svg-filter); /* sets the color of the SVGs */
    height: auto;
}

.weather-display-page .current-weather {
    position: relative;
    margin-right: -25px;
    z-index: 99999;
    height: 680px;
    width: 500px;
    background: url('./assets/images/temp-asset-remove-after-testing.jpg')
        no-repeat center center / cover;
}

.weather-info.overlay {
    width: 100%;
    height: 100%;
    padding: 50px 30px;
    border-radius: inherit;
    background-image: linear-gradient(
        to top left,
        rgba(52, 67, 202, 0.65),
        rgba(64, 191, 207, 0.65)
    );
}

.date-info .calendar-date {
    margin-top: 10px;
}

.location-info {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    margin: 15px 0 0 -5px;
}

.location-info img {
    width: 28px;
}

.weather-summary {
    position: absolute;
    bottom: 65px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    gap: 10px;
}
.weather-summary img {
    width: 90px;
}

.weather-details {
    display: grid;
    align-content: space-between;
    padding: 43px 60px 50px 85px;
    background-color: var(--weather-details-bgClr);
}

.weather-stat {
    display: flex;
    justify-content: space-between;
    margin-bottom: 10px;
}

.weekly-forecast {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
    align-items: center;
    justify-items: center;
    gap: 1px;
    border-radius: 10px;
    overflow: hidden;
}

.weekly-forecast .forecast-card {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 150px;
    background-color: var(--forecast-card-bgClr);
    justify-content: space-evenly;
    align-items: center;
}

.forecast-card.day-1 {
    background-color: var(--main-text-clr);
    color: var(--inverted-text-clr);
    border-radius: 10px;
}

.forecast-card.day-1 img {
    filter: none;
}

.forecast-card img {
    width: 46px;
}

.toggle-form-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 55px;
    background: linear-gradient(
        to left,
        rgba(52, 67, 202, 1),
        rgba(64, 191, 207, 1)
    );
    border: none;
    border-radius: 7px;
    color: inherit;
    font-size: 2rem;
    transition: scale 0.3s ease-in-out;
}

.toggle-form-btn:active {
    scale: 0.99;
}

.toggle-form-btn img {
    width: 35px;
}

.location-search {
    position: relative;
}

.location-search .search-form {
    position: absolute;
    top: 0;
    width: 100%;
}

.weather-details .search-form input {
    width: 100%;
}

@media screen and (max-width: 65em) {
    .font-l {
        font-size: 2rem;
    }

    .font-xl {
        font-size: 3rem;
    }

    .toggle-form-btn {
        font-size: 1.6rem;
    }

    .weather-display-page .current-weather,
    .weather-display-page .weather-details {
        height: 100vh;
        border-radius: 0;
    }

    .weekly-forecast {
        grid-template-columns: repeat(auto-fit, minmax(152px, 1fr));
    }
}

@media screen and (max-width: 48em) {
    .error-container {
        padding-left: 15px;
    }

    .error-container img {
        left: 2px;
        top: -90px;
    }

    .weekly-forecast {
        width: 85%;
        margin: auto;
        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    }

    .forecast-card {
        height: 125px;
    }

    .forecast-card img {
        width: 40px;
    }

    .weather-summary {
        top: 48px;
        right: 30px;
    }

    .weather-summary img {
        width: 0;
        position: absolute;
    }

    .toggle-form-btn img {
        width: 28px;
    }

    .weather-display-page {
        display: grid;
        grid-template-rows: auto 1fr;
        justify-content: stretch;
        align-items: stretch;
    }

    .weather-display-page :is(.current-weather, .weather-details) {
        width: 100%;
        border-radius: 0;
        height: auto;
        gap: 60px;
    }

    .weather-details {
        padding: 50px 30px;
    }

    .weather-display-page .current-weather {
        height: fit-content;
    }
}

@media screen and (max-width: 26em) {
    .search-form {
        width: 100%;
        display: flex;
        justify-content: center;
    }

    .search-form input {
        width: 95%;
        font-size: 1.6rem;
        margin: auto;
    }

    .search-form button[type='submit'] {
        right: 14px;
    }

    .font-l {
        font-size: 1.9rem;
    }

    .font-xl {
        font-size: 2.5rem;
    }
}

